k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy-deploy
  name: proxy-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-deploy
  template:
    metadata:
      labels:
        app: proxy-deploy
    spec:
      containers:
      - image: manedurphy/proxy-service
        name: proxy-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-read-deploy
  name: redis-read-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-read-deploy
  template:
    metadata:
      labels:
        app: redis-read-deploy
    spec:
      containers:
      - image: redis:6.2.3-alpine
        name: redis
        command:
          - "redis-server"
        args:
          - "--replicaof"
          - "redis-write-service.default.svc.cluster.local"
          - "6379"
          - "--protected-mode"
          - "no" 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-write-deploy
  name: redis-write-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-write-deploy
  template:
    metadata:
      labels:
        app: redis-write-deploy
    spec:
      containers:
      - image: redis:6.2.3-alpine
        name: redis
        command:
          - "redis-server"
        args:
          - "--protected-mode"
          - "no"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: photo-header-deploy
  name: photo-header-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo-header-deploy
  template:
    metadata:
      labels:
        app: photo-header-deploy
    spec:
      containers:
      - image: manedurphy/photo-header-service
        name: photo-header-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hosted-by-deploy
  name: hosted-by-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hosted-by-deploy
  template:
    metadata:
      labels:
        app: hosted-by-deploy
    spec:
      containers:
      - image: manedurphy/hosted-by-service
        name: hosted-by-service
