k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 5000
      - path: /api/headerService
        pathType: Prefix
        backend:
          service:
            name: photo-header-service
            port:
              number: 5001
      - path: /api/hostedbyService
        pathType: Prefix
        backend:
          service:
            name: hosted-by-service
            port:
              number: 5002
